<resources>
    <string name="icon">icon</string>
    <string name="appName">Represent!</string>
    <string name="command">Enter Your Zip code / Address</string>
    <string name="background">background</string>
    <string name="hint">Zip Code / Address </string>
    <string name="go">Go!</string>
    <string name="location">location</string>
    <string name="currentLocation">Use Current Location</string>
    <string name="randomLocation">Use Random Location</string>
    <string name="congressionalTitle">Congress Representatives in</string>
    <string name="invalidAddress">Invalid Address</string>
    <string name="profileOne">profileOne</string>
    <string name="profileTwo">profileTwo</string>
    <string name="profileThree">profileThree</string>
    <string name="bigProfile">bigProfile</string>
    <string name="website">website</string>
    <string name="phone">phone</string>
    <string name="twitter">twitter</string>
    <string name="moreInfo">More Info</string>
    <string name="or">or</string>
    <string name="Name">Name</string>
    <string name="Party">Party</string>
    <string name="Title">Title</string>
    <string name="blank"></string>

    <string name="ballotTitle">Additional Election Info In</string>
    <string name="electionEvent">Election Event</string>
    <string name="pollingLocation">Polling Location</string>
    <string name="dropOffLocation">Drop-Off Location</string>
    <string name="ballotMeasures">Ballot Measures</string>

</resources>